Fixed issue with spacing variables

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,9 +1,9 @@
 
 $gutter: 20px;
-$spacingS: calc($gutter / 2);
-$spacingM: calc($gutter);
-$spacingL: calc($gutter * 2);
-$spacingXL: calc($gutter * 4);
+$spacingS: calc(#{$gutter} / 2);
+$spacingM: calc(#{$gutter});
+$spacingL: calc(#{$gutter} * 2);
+$spacingXL: calc(#{$gutter} * 4);
 
 $maxwidth: 1200px;
 $ffh: 'Oswald', 'Verdana', serif;
